| Summary: | ASTERISK-26665: app_queue: Agent ringing, Caller hangup before timeout, no agent name logged - missing RINGNOANSWER? | ||||
| Reporter: | Marek Cervenka (cervajs) | Labels: | |||
| Date Opened: | 2016-12-19 04:35:45.000-0600 | Date Closed: | 2017-01-25 19:15:06.000-0600 | ||
| Priority: | Major | Regression? | |||
| Status: | Closed/Complete | Components: | Applications/app_queue | ||
| Versions: | 13.13.1 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | centos 6/32bit | Attachments: | ( 0) queue.txt | ||
| Description: | i'm trying get report about missed calls per agent. i'm using queue_log
scenario is - call to queue test - agent is ringing (SIP/vr1a305) - caller hangup (SIP/vr1a555) - agentname in queue_log is missing {noformat} +-----+----------------------------+---------------+-----------+-------+---------+-------+-------+-------+-------+-------+ | id | time | callid | queuename | agent | event | data1 | data2 | data3 | data4 | data5 | +-----+----------------------------+---------------+-----------+-------+---------+-------+-------+-------+-------+-------+ | 352 | 2016-12-19 11:03:49.456697 | 1482141812.3 | test | NONE | ABANDON | 1 | 1 | 17 | | | {noformat} i started discussion in this thread http://lists.digium.com/pipermail/asterisk-dev/2016-December/076051.html | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2016-12-19 04:35:47.263-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Martin Tomec (matesstar) 2016-12-19 04:47:50.293-0600 There is debug log message "Nobody answered" - I think it is in code part, where should be also called ast_queue_log (probably with last membername and "RINGNOANSWER"). By: Marian Piater (maikyp) 2016-12-20 02:35:59.374-0600 Hi, same issue also on the latest Asterisk 11.25.1. When caller abandon the queue during agent ringing, then agent name is empty. {noformat} +----+----------------------------+---------------+-----------+-------+------------+--------+-------+-------+-------+-------+-------+---------------------+ | id | time | callid | queuename | agent | event | data | data1 | data2 | data3 | data4 | data5 | created | +----+----------------------------+---------------+-----------+-------+------------+--------+-------+-------+-------+-------+-------+---------------------+ | 11 | 2016-12-20 09:32:13.593328 | 1482222733.15 | test | NONE | ENTERQUEUE | |100|1 | | | | | | 2016-12-20 09:32:13 | | 12 | 2016-12-20 09:32:15.366279 | 1482222733.15 | test | NONE | ABANDON | 1|1|2 | | | | | | 2016-12-20 09:32:15 | +----+----------------------------+---------------+-----------+-------+------------+--------+-------+-------+-------+-------+-------+---------------------+ {noformat} By: Marek Cervenka (cervajs) 2016-12-20 03:11:57.107-0600 it looks like this issue is duplicate of ASTERISK-19317 By: Martin Tomec (matesstar) 2016-12-22 06:35:11.970-0600 Patch is in gerrit review. It adds RINGNOANSWER event between ENTERQUEUE and ABANDON. Because the previous issue was also marked as a bug, I have put the patch to the branche 13. It changes output of queue_log, but AFAIK this is allowed change to LTS versions. By: Martin Tomec (matesstar) 2017-01-06 09:27:09.363-0600 I was asked to put some quelog examples, so there is example before patch, when caller hanged up after 25sec: {noformat} +-----+----------------------------+---------------+-----------+----------+--------------+-------+-------+-------+-------+-------+ | id | time | callid | queuename | agent | event | data1 | data2 | data3 | data4 | data5 | +-----+----------------------------+---------------+-----------+----------+--------------+-------+-------+-------+-------+-------+ | 371 | 2016-12-19 11:44:19.295695 | 1482144259.12 | test | NONE | ENTERQUEUE | | 555 | 1 | | | | 372 | 2016-12-19 11:44:34.303274 | 1482144259.12 | test | agent | RINGNOANSWER | 15000 | | | | | | 373 | 2016-12-19 11:44:44.492556 | 1482144259.12 | test | NONE | ABANDON | 1 | 1 | 25 | | | +-----+----------------------------+---------------+-----------+----------+--------------+-------+-------+-------+-------+-------+ {noformat} Another example, when caller hanged up after 3sec: {noformat} +-----+----------------------------+---------------+-----------+----------+--------------+-------+-------+-------+-------+-------+ | id | time | callid | queuename | agent | event | data1 | data2 | data3 | data4 | data5 | +-----+----------------------------+---------------+-----------+----------+--------------+-------+-------+-------+-------+-------+ | 374 | 2016-12-21 14:51:55.673270 | 1482328315.19 | test | NONE | ENTERQUEUE | | 555 | 1 | | | | 375 | 2016-12-21 14:51:58.408761 | 1482328315.19 | test | NONE | ABANDON | 1 | 1 | 3 | | | +-----+----------------------------+---------------+-----------+----------+--------------+-------+-------+-------+-------+-------+ {noformat} And finally example after patch, when caller hanged up after 5sec: {noformat} +-----+----------------------------+---------------+-----------+----------+--------------+-------+-------+-------+-------+-------+ | id | time | callid | queuename | agent | event | data1 | data2 | data3 | data4 | data5 | +-----+----------------------------+---------------+-----------+----------+--------------+-------+-------+-------+-------+-------+ | 398 | 2016-12-21 16:46:45.320780 | 1482335205.0 | test | NONE | ENTERQUEUE | | 555 | 1 | | | | 399 | 2016-12-21 16:46:50.138233 | 1482335205.0 | test | agent | RINGNOANSWER | 4810 | | | | | | 400 | 2016-12-21 16:46:50.142351 | 1482335205.0 | test | NONE | ABANDON | 1 | 1 | 5 | | | +-----+----------------------------+---------------+-----------+----------+--------------+-------+-------+-------+-------+-------+ {noformat} By: Friendly Automation (friendly-automation) 2017-01-25 19:15:07.431-0600 Change 4649 merged by zuul: app_queue: add RINGCANCELED log event on caller hang up [https://gerrit.asterisk.org/4649|https://gerrit.asterisk.org/4649] | ||||