app_queue: add RINGNOANSWER event on caller hang up

QueueLog did not log ringnoanswer when the caller abandoned call
before first timeout. It was impossible to get agent membername
and ringing duration for this short calls. "rna" function seems
apropriate for this case, but autopause function shouldnt be used.
Autopause is not intended for short calls canceled by caller.

ASTERISK-26665

Change-Id: Ic70f7b0f32fc95c9378e5bcf63865519014805d3